<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/root_view"
    >

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="Name"
        android:inputType="textCapWords"
        >


    </EditText>

    <TextView
        android:id="@+id/toppings"
        style="@style/toppings"
        android:text="@string/toppings" />


    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        style="@style/check_whipped_cream"
        android:text="@string/check_whipped_cream"/>

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        style="@style/check_whipped_cream"
        android:text="@string/check_chocolate"/>


    <TextView
        android:id="@+id/quantity"
        style="@style/quantity"
        android:text="@string/quantity" />

    <LinearLayout style="@style/linear_view">

        <Button
            android:id="@+id/minus_button"
            style="@style/minus_button"
            android:onClick="decrement"
            android:text="@string/minus_button" />

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/quantity_text_view"
            android:text="@string/quantity_text_view" />

        <Button
            android:id="@+id/plus_button"
            style="@style/plus_button"
            android:onClick="increment"
            android:text="@string/plus_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/price"
        style="@style/price"
        android:text="@string/price" />

    <TextView
        android:id="@+id/order_summary_text_view"
        style="@style/price_text_view"
        android:text="@string/price_text_view" />

    <Button
        android:id="@+id/order_button"
        style="@style/order_button"
        android:onClick="submitOrder"
        android:text="@string/order_button" />

</LinearLayout>